--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&display=swap" rel="stylesheet">
+
     <title>Top taj</title>
   </head>
   <body>
